# food_marketplace_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt  template.env
.github/workflows/: django_tests.yml
docker/django/: Dockerfile
docker/nginx/: Dockerfile  default.conf  default.dev.conf  default.prod.conf  entrypoint.sh  healthcheck.sh
docker/postgres/: Dockerfile  healthcheck.sh  init.sh
src/accounts/: admin.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
src/accounts/admin/: __init__.py  admin.py
src/accounts/forms/: __init__.py  forms.py
src/accounts/migrations/: 0001_initial.py  0002_customerproxy_staffproxy.py  0002_remove_user_type.py  0004_useraddress.py
src/accounts/models/: __init__.py  models.py  proxy.py
src/accounts/serializers/: __init__.py  mixins.py  serializers.py
src/accounts/services/: normalizers.py
src/accounts/tests/: api_test_case.py  test_managers.py  test_models.py  test_permissions.py  test_serializer_mixins.py  test_serializers.py  test_services.py  (+1 more)
src/catalogs/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
src/core/: urls.py
src/dumps/: category_dump.json
src/orders/: urls.py  views.py
src/utils/: models.py  serializers.py
src_old/: manage.py
src_old/accounts/: admin.py  models.py  router.py  serializers.py  validators.py
src_old/catalogs/: admin.py  apps.py  router.py
(+111 files in other folders)
